[package]
name = "openconfigd"
version = "0.1.0"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.dev>"]
edition = "2018"

[[bin]] # Bin for CLI helper command.
name = "cli_command"
path = "src/cli_command.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
